подготовил к вёрстке catalog.html
сделать main-inner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="page-header-nav">
         <ul class="page-header-nav-list">
           <li class="page-header-nav-item">
-            <a class="page-header-nav-link" href="#">Главная</a>
+            <a class="page-header-nav-link" href="#">Главная</a><!-- active -->
           </li>
           <li class="page-header-nav-item">
             <a class="page-header-nav-link" href="#">О Седоне</a>
